<resources>
    <string name="app_name">Notes</string>

    <!-- Strings used for intents -->
    <!-- Used to pass data between NotePreviewsActivity and NoteEditorActivity -->
    <string name="noteIdIntent">Note Id</string>
    <string name="listUsedIntent">List Used</string>
    <string name="noteSuccessIntent">Note Success</string>
    <string name="notePositionIntent">Note Position</string>
    <string name="noteIsFavoriteIntent">Note Is Favorite</string>
    <string name="menuActionIntent">Menu Action Intent</string>


    <!-- Hint for title and content in NoteEditorActivity -->
    <string name="editTextNoteHint">Note</string>
    <string name="titleEditText">Title</string>


    <!-- Toolbar title when selecting notes in NotePreviewsActivity -->
    <string name="toolbarMainNotes">Notes</string>
    <string name="toolbarFavoriteNotes">Favorite Notes</string>
    <string name="toolbarArchiveNotes">Archive</string>
    <string name="toolbarRecycleBinNotes">Trash</string>
    <string name="toolbarSettings">Settings</string>


    <!-- MenuItem names for NoteEditorActivity-->
    <string name="favoriteNoteMenuItem">Favorite Note</string>
    <string name="archiveNoteMenuItem">Archive Note</string>
    <string name="unArchiveNoteMenuItem">Unarchive Note</string>
    <string name="deleteNoteMenuItem">Delete Note</string>
    <string name="restoreNoteMenuItem">Restore Note</string>
    <string name="deleteForeverMenuItem">Delete Forever</string>
    <string name="reminderNoteMenuItem">Add Reminder</string>


    <!-- MenuItem names NotePreviewsActivity -->
    <string name="layoutManager">Change Layout</string>


    <!-- Strings used for delete dialog fragment -->
    <string name="messageDialog">Do you want to delete this note?</string>
    <string name="deleteDialog">Delete</string>
    <string name="cancelDialog">Cancel</string>

    <!-- String for trying to edit a RecycleBin note -->
    <string name="editRecycleBinNote">Can\'t edit note in Trash</string>


    <!-- CAB menu items in NotePreviewsActivity-->
    <string name="deleteContextualMenuItem">Delete</string>
    <string name="archiveContextualMenuItem">Archive</string>
    <string name="unarchiveContextualMenuItem">Unarchive</string>
    <string name="restoreContextualMenuItem">Restore</string>
    <string name="deleteForeverContextualMenuItem">Delete Forever</string>

    <!-- Delete forever dialog strings -->
    <plurals name="deleteForever">
        <item quantity="one">Delete note forever?</item>
        <item quantity="other">Delete notes forever?</item>
    </plurals>

    <!-- String for multi select buffer full -->
    <string name="bufferFull">Please wait while previous selections are completed</string>


    <!-- SnackBar output strings -->
    <plurals name="snackBarDelete">
        <item quantity="one">Note moved to Trash</item>
        <item quantity="other">Notes moved to Trash</item>
    </plurals>

    <plurals name="snackBarArchive">
        <item quantity="one">Note archived</item>
        <item quantity="other">Notes archived</item>
    </plurals>

    <plurals name="snackBarUnarchive">
        <item quantity="one">Note Unarchived</item>
        <item quantity="other">Notes Unarchived</item>
    </plurals>

    <plurals name="snackBarRestore">
        <item quantity="one">Note restored</item>
        <item quantity="other">Notes restored</item>
    </plurals>

    <string name="snackBarUndoAction">Undo</string>


    <!-- Navigation Drawer names -->
    <string name="allNotesDrawer">All Notes</string>
    <string name="favoriteNotesDrawer">Favorite Notes</string>
    <string name="archiveNotesDrawer">Archive</string>
    <string name="recycleBinNotesDrawer">Trash</string>
    <string name="settingsDrawer">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Reminder Dialog title/button names -->
    <string name="reminderDialogTitle">Add Reminder</string>
    <string name="reminderDialogPositive">Save</string>
    <string name="reminderDialogNeutral">Delete</string>
    <string name="reminderDialogNegative">Cancel</string>


    <!-- String Arrays used for the Reminder Dialog -->
    <string-array name="dateXMLArray">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Next</item>
        <item>Next Month</item>
        <item>Pick A Date&#8230;</item>
    </string-array>

    <string-array name="timeXMLArray">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
        <item>Pick A Time&#8230;</item>
    </string-array>

    <string-array name="frequencyXMLArrayListItem">
        <item>Does not repeat</item>
        <item>Repeats daily</item>
        <item>Repeats weekly</item>
        <item>Repeats monthly</item>
        <item>Repeats yearly</item>
        <item>Custom&#8230;</item>
    </string-array>

    <string-array name="frequencyXMLArrayDropDown">
        <item>Does not repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>Custom&#8230;</item>
    </string-array>

    <string name="pickADate">Pick A Date&#8230;</string>
    <string name="pickATime">Pick A Time&#8230;</string>


    <!-- Arrays, Strings, and Plurals for FrequencyPicker -->
    <string name="everyString">Every</string>
    <string name="xDayEditText">1</string>
    <string name="doneButton">DONE</string>
    <string name="xEventsEditText">1</string>
    <string name="eventsTextView">event</string>

    <plurals name="day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <plurals name="week">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>

    <plurals name="month">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>

    <plurals name="year">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>

    <plurals name="event">
        <item quantity="one">event</item>
        <item quantity="other">events</item>
    </plurals>

    <string-array name="headerArray">
        <item>REPEAT DAILY</item>
        <item>REPEAT WEEKLY</item>
        <item>REPEAT MONTHLY</item>
        <item>REPEAT YEARLY</item>
    </string-array>

    <string-array name="bottomArrayListItem">
        <item>Forever</item>
        <item>Until</item>
        <item>For</item>
    </string-array>

    <string-array name="bottomArrayDropDown">
        <item>Forever</item>
        <item>Until a date</item>
        <item>For a number of events</item>
    </string-array>

    <!-- Monthly Layout Strings -->
    <string name="sameDayEachMonth">on the same day each month</string>
    <string name="onEveryXDay">on every</string>

    <!-- Weekly Layout Strings -->
    <string name="sundayShort">SUN</string>
    <string name="mondayShort">MON</string>
    <string name="tuesdayShort">TUE</string>
    <string name="wednesdayShort">WED</string>
    <string name="thursdayShort">THU</string>
    <string name="fridayShort">FRI</string>
    <string name="saturdayShort">SAT</string>

    <!-- Strings for showing FrequencyPicker choice as text-->
    <string name="repeats">Repeats\u0020</string>
    <string name="repeatEvery">\u0020(on every\u0020</string>
    <string name="repeatUntil">; until\u0020</string>

    <plurals name="repeatDay">
        <item quantity="one">daily</item>
        <item quantity="other">every %d days</item>
    </plurals>

    <plurals name="repeatWeek">
        <item quantity="one">weekly</item>
        <item quantity="other">every %d weeks</item>
    </plurals>

    <plurals name="repeatMonth">
        <item quantity="one">monthly</item>
        <item quantity="other">every %d months</item>
    </plurals>

    <plurals name="repeatYear">
        <item quantity="one">yearly</item>
        <item quantity="other">every %d years</item>
    </plurals>

    <plurals name="repeatEvents">
        <item quantity="one">; for %d time</item>
        <item quantity="other">; for %d times</item>
    </plurals>


    <!-- String used for notifications/notification channels -->
    <string name="reminderChannelId">Reminder Channel Id</string>
    <string name="reminderChannelName">Reminder Channel Name</string>
    <string name="reminderChannelDescription">Reminder Channel Description</string>

    <!-- Notification intent strings -->
    <string name="notificationId">Notification Id</string>
    <string name="notificationTitle">Notification Title</string>
    <string name="notificationContent">Notification Content</string>
    <string name="notificationReminderRepeats">Notification Reminder repeats</string>


    <!-- SharedPreference strings -->
    <string name="userSettingsPreference">User Settings</string>
    <string name="layoutChoicePreference">Layout Choice Preference</string>
    <string name="emptyTrashInXDays">Empty trash in X days</string>
    <string name="morningTimePreference">Morning Time Preference</string>
    <string name="afternoonTimePreference">Afternoon Time Preference</string>
    <string name="eveningTimePreference">Evening Time Preference</string>
    <string name="nightTimePreference">Night Time Preference</string>
    <string name="morningPreference">Morning</string>
    <string name="afternoonPreference">Afternoon</string>
    <string name="eveningPreference">Evening</string>
    <string name="nightPreference">Night</string>

    <string name="emptyTrashTitle">Delete note after X days in Trash</string>
    <string name="emptyTrashMessage">Note: Setting to zero will erase all notes in the Trash</string>


    <!-- FormatUtils strings -->

    <!-- lastUpdated strings -->
    <string name="lastUpdatedFormatUtils">Last Updated \n</string>
    <string name="todayFormatUtils">Today,\u0020</string>
    <string name="tomorrowFormatUtils">Tomorrow,\u0020</string>
    <string name="yesterdayFormatUtils">Yesterday,\u0020</string>

    <!-- formatNthWeek strings -->
    <string name="firstNthWeek">first\u0020</string>
    <string name="secondNthWeek">second\u0020</string>
    <string name="thirdNthWeek">third\u0020</string>
    <string name="fourthNthWeek">fourth\u0020</string>
    <string name="lastNthWeek">last\u0020</string>
    <string name="title_activity_tes">tes</string>


</resources>
