<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="Category 1">

        <EditTextPreference
            android:defaultValue="7"
            android:inputType="number"
            android:key="@string/emptyTrashInXDays"
            android:maxLength="2"
            android:title="Delete note after X days in Trash" />

    </android.support.v7.preference.PreferenceCategory>


    <android.support.v7.preference.PreferenceCategory android:title="Reminder Settings">

        <com.ozmar.notes.TimePreference
            style="@style/AppPreference.DialogPreference"
            android:defaultValue="480"
            android:key="@string/morningTimePreference"
            android:title="@string/morningPreference" />

        <com.ozmar.notes.TimePreference
            style="@style/AppPreference.DialogPreference"
            android:defaultValue="720"
            android:key="@string/afternoonTimePreference"
            android:title="@string/afternoonPreference" />

        <com.ozmar.notes.TimePreference
            style="@style/AppPreference.DialogPreference"
            android:defaultValue="1020"
            android:key="@string/eveningTimePreference"
            android:title="@string/eveningPreference" />

        <com.ozmar.notes.TimePreference
            style="@style/AppPreference.DialogPreference"
            android:defaultValue="1200"
            android:key="@string/nightTimePreference"
            android:title="@string/nightPreference" />

    </android.support.v7.preference.PreferenceCategory>


</android.support.v7.preference.PreferenceScreen>