<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite_note"
        android:checkable="false"
        android:icon="@drawable/ic_favorite_star_off"
        android:title="@string/favoriteNoteMenuItem"
        app:showAsAction="always" />

    <item
        android:id="@+id/save_note"
        android:icon="@drawable/ic_save_white"
        android:title="@string/saveNoteMenuItem"
        app:showAsAction="always" />

    <item
        android:id="@+id/archive_note"
        android:icon="@drawable/ic_archive_white"
        android:title="@string/archiveNoteMenuItem"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unarchive_note"
        android:icon="@drawable/ic_unarchive_white"
        android:title="@string/unArchiveNoteMenuItem"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_note"
        android:title="@string/deleteNoteMenuItem"
        android:icon="@drawable/ic_recycle_bin_white"
        app:showAsAction="never" />

    <item
        android:id="@+id/restore_note"
        android:icon="@drawable/ic_restore_white"
        android:title="@string/restoreNoteMenuItem"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>